kube/playground-todoapp/deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-todoapp-ingress
  namespace: "${NAMESPACE}"
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: shared-fc
    networking.gke.io/managed-certificates: playground-todoapp-cert
    kubernetes.io/ingress.global-static-ip-name: playground-todoapp-dot-eave-dot-dev-addr
    kubernetes.io/ingress.class: gce
  labels:
    app: playground-todoapp-app
spec:
  # ingressClassName: gce # This does not work. Without the "ingress.class" annotation, the LB isn't created.
  defaultBackend:
    service:
      name: playground-todoapp
      port:
        name: http

---
apiVersion: v1
kind: Service
metadata:
  name: playground-todoapp
  namespace: "${NAMESPACE}"
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "shared-bc"}'
spec:
  type: NodePort
  selector:
    app: playground-todoapp-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-todoapp-deployment
  namespace: "${NAMESPACE}"
spec:
  selector:
    matchLabels:
      app: playground-todoapp-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: playground-todoapp-app
    spec:
      serviceAccountName: ksa-app-playground-todoapp
      containers:
        - name: playground-todoapp
          image: "us-central1-docker.pkg.dev/${GOOGLE_CLOUD_PROJECT}/docker/playground-todoapp:${APP_VERSION}"
          resources:
            # requests and limits must always be the same on Autopilot clusters without bursting.
            # if requests is omitted, the limits values are used.
            limits:
              memory: "1Gi"
              cpu: "250m"

          ports:
            - name: app
              containerPort: 8000
